KUBERNETES/learning/apache-deployment.yml
# This YAML exposes the fields defined in the UI. It can be edited directly or have new YAML pasted in.
# Not all available Kubernetes properties are recognized by the form exposed in the UI, and unrecognized properties are ignored during import.
# If the required properties are not supported by this step, the 'Deploy raw Kubernetes YAML' step can be used to deploy YAML directly to Kubernetes, and supports all properties.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deployment	
  labels:
    app: httpd-deployment
spec:
  selector:
    matchLabels:
      app: httpd-deployment
  replicas: 1
  template:
    metadata:
        labels:
            app: httpd-deployment
    spec:
        containers:
        - name: httpd
          image: httpd
          ports:
          - name: http-port
            containerPort: 80
