KUBERNETES/learning/mongodb-deployment.yaml
# This YAML exposes the fields defined in the UI. It can be edited directly or have new YAML pasted in.
# Not all available Kubernetes properties are recognized by the form exposed in the UI, and unrecognized properties are ignored during import.
# If the required properties are not supported by this step, the 'Deploy raw Kubernetes YAML' step can be used to deploy YAML directly to Kubernetes, and supports all properties.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment	
  labels:
    app: mongodb-deployment-label
spec:
  selector:
    matchLabels:
      app: mongodb-deployment-label
  replicas: 1
  template:
    metadata:
        labels:
            app: mongodb-deployment-label
    spec:
        containers:
        - name: mongodb
          image: mongo
          ports:
            - containerPort: 27017
