KUBERNETES/learning/mongodb-externalservice.yaml
apiVersion: v1
kind: Service
metadata:
    name: mongo-express-external-service
spec:
    selector: 
        app: mongo-express
    type: LoadBalancer
    ports:
        - protocol: TCP
          port: 8081
          targetPort: 8081
          nodePort: 30001
