KUBERNETES/learning/general-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: general-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: httpd.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpd-deployment-service
            port:
              number: 80
