KUBERNETES/learning/mongo-express-deployment-and-external-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mongo-express
    labels:
        app: mongo-express
spec:
    replicas: 1
    selector:
        matchLabels:
            app: mongo-express
    template:
        metadata:
            labels:
                app: mongo-express
        spec:
            containers:
            - name: mongo-express
              image: mongo-express
              ports:
                - containerPort: 8081
---

apiVersion: v1
kind: Service
metadata:
    name: mongo-express-external-service
spec:
    selector: 
        app: mongo-express
    type: LoadBalancer
    ports:
        - protocol: TCP
          port: 8081
          targetPort: 8081
          nodePort: 30001

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
spec:
  rules:
  - host: mongo-express.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-express-service
            port:
              number: 8081
