KUBERNETES/learning/mongo-express-deployment-service-and-ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mongo-express
    labels:
        app: mongo-express
spec:
    replicas: 1
    selector:
        matchLabels:
            app: mongo-express
    template:
        metadata:
            labels:
                app: mongo-express
        spec:
            containers:
            - name: mongo-express
              image: mongo-express
              ports:
                - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
    name: mongo-express-service
spec:
    selector: 
        app: mongo-express
    ports:
        - protocol: TCP
          port: 8081
          targetPort: 8081

---

            
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "mongo-express.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mongo-express-service
            port:
              number: 8081
